--- a/docker/nginx/myconfig1.conf
+++ b/docker/nginx/myconfig1.conf
@@ -1,3 +1,18 @@
+server {
+        listen 80;     # - listen 80은 누가 80번 포트로 들어오면 바로 밑에 있는 내용 실행.
+        location / {   # - location / { } 부분은 누가 /로 시작하는 모든 경로로 들어오면 웹서버(웹서버컨테이너IP:8080 또는 웹서버컨테이너이름:8080)로 보내기.(proxy_pass http://웹서버컨테이너IP:8080; 또는 proxy_pass http://server-container:8080;)
+            # proxy_pass http://웹서버컨테이너IP:8080;
+            # proxy_pass http://웹서버컨테이너이름:8080;
+            proxy_pass http://server-container:8080;   
+            # 웹서버(웹서버컨테이너IP:8080 또는 웹서버컨테이너이름:8080)에 도움되는 유저의 부가정보(proxy_set_header) 채우기.
+            # - proxy_set_header 부분은 header라는 부분에 IP 주소 등 여러 정보 채우기.
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+}
+
 # nginx 폴더 아래에 myconfig1.conf 파일을 안에 만들고 위에 있는 대충 기본적인 설정들을 복붙해보자.
 
 # 그리고 이 설정파일을 특정 폴더에 넣기.
@@ -21,16 +36,15 @@
 # }
 # . . . (생략)
 
-
-server {
-        listen 80;     # - listen 80은 누가 80번 포트로 들어오면 바로 밑에 있는 내용 실행.
-        location / {   # - location / { } 부분은 누가 /로 시작하는 모든 경로로 들어오면 웹서버(localhost:8080)로 보내기.(proxy_pass http://localhost:8080;)
-            proxy_pass http://localhost:8080;
-            # 웹서버(localhost:8080)에 도움되는 유저의 부가정보(proxy_set_header) 채우기.
-            # - proxy_set_header 부분은 header라는 부분에 IP 주소 등 여러 정보 채우기.
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-}
+# server {
+#         listen 80;     # - listen 80은 누가 80번 포트로 들어오면 바로 밑에 있는 내용 실행.
+#         location / {   # - location / { } 부분은 누가 /로 시작하는 모든 경로로 들어오면 웹서버(localhost:8080)로 보내기.(proxy_pass http://localhost:8080;)
+#             proxy_pass http://localhost:8080;
+#             # 웹서버(localhost:8080)에 도움되는 유저의 부가정보(proxy_set_header) 채우기.
+#             # - proxy_set_header 부분은 header라는 부분에 IP 주소 등 여러 정보 채우기.
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+# }
