--- a/docker/nginx/myconfig1.conf
+++ b/docker/nginx/myconfig1.conf
@@ -3,7 +3,8 @@ server {
         location / {   # - location / { } 부분은 누가 /로 시작하는 모든 경로로 들어오면 웹서버(웹서버컨테이너IP:8080 또는 웹서버컨테이너이름:8080)로 보내기.(proxy_pass http://웹서버컨테이너IP:8080; 또는 proxy_pass http://server-container:8080;)
             # proxy_pass http://웹서버컨테이너IP:8080;
             # proxy_pass http://웹서버컨테이너이름:8080;
-            proxy_pass http://server-container:8080;   
+            # proxy_pass http://server-container:8080;
+            proxy_pass http://webserver:8080;   
             # 웹서버(웹서버컨테이너IP:8080 또는 웹서버컨테이너이름:8080)에 도움되는 유저의 부가정보(proxy_set_header) 채우기.
             # - proxy_set_header 부분은 header라는 부분에 IP 주소 등 여러 정보 채우기.
             proxy_set_header Host $host;
