[코딩애플] 도커 Docker & Container 13강 - Docker compose 3. 실시간 개발, graceful shutdown

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,6 +18,7 @@ EXPOSE 8080
 
 USER node
 CMD ["node", "server.js"]
+# CMD ["nodemon", "server.js"]
 
 # FROM node:20-slim
 # # /app 폴더 이동 (cd 명령어랑 비슷)
