[코딩애플] 도커 Docker & Container 14강 - Orchestration 1. 태스크, 서비스, 클러스터 개념정리

--- a/docker/nginx/myconfig1.conf
+++ b/docker/nginx/myconfig1.conf
@@ -4,7 +4,8 @@ server {
             # proxy_pass http://웹서버컨테이너IP:8080;
             # proxy_pass http://웹서버컨테이너이름:8080;
             # proxy_pass http://server-container:8080;
-            proxy_pass http://webserver:8080;   
+            # proxy_pass http://webserver:8080;   
+            proxy_pass http://localhost:8080;   # 컨테이너(nginx, nodeserver) 끼리 서로 localhost로 부르도록 수정필요
             # 웹서버(웹서버컨테이너IP:8080 또는 웹서버컨테이너이름:8080)에 도움되는 유저의 부가정보(proxy_set_header) 채우기.
             # - proxy_set_header 부분은 header라는 부분에 IP 주소 등 여러 정보 채우기.
             proxy_set_header Host $host;
