--- a/docker2/.dockerignore
+++ b/docker2/.dockerignore
@@ -4,6 +4,10 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
+.git
+Dockerfile
+node_modules
+
 # **/.classpath
 # **/.dockerignore
 # **/.env
